[package]
name = "osui-element"
version = "0.1.22"
edition = "2021"
description = "The element attribute for defining elements in OSUI"
license = "Apache-2.0"

[lib]
proc-macro = true
path = "./lib.rs"

[[bin]]
path = "./main.rs"
name = "osui-element"

[dependencies]
proc-macro2 = "1.0.89"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
